# UBB-Computer-Science

./: README.md
Semester 1/Computational Logic/Exam Prep (Very Useful)/: Computational_Logic - Exam_2022-2023.docx  Exam-Computational_Logic-Subjects_2022-2023.doc  Models_subjects_exam_Computational-Logic.doc
Semester 1/Computational Logic/Individual Homework/: Exercises_ Boolean_functions_2022-2023.doc  Exercises_Logic Circuits_2022-2023.doc  Exercises_Predicate_Logic_2022-2023.docx  Exercises_Propositional_Logic_2022-2023.docx  Exercises_Resolution_predicate_2021-2022.docx  Exercises_Resolution_proposition_2022-2023.docx  Exercises_Semantic Tableaux_Method_2022-2023.docx
Semester 1/Computational Logic/Lectures/: Lecture10_Boolean functions_2022-2023.pptx  Lecture11_Veitch-Karnaugh_method_2022-2023.pptx  Lecture12_Quine_Moisil_methods_2022-2023.pptx  Lecture1_2022-2023.pptx  Lecture3_Propositional_logic_2022-2023.pptx  Lecture4_Propositional_logic_2022-2023.pptx  Lecture5_Predicate_logic_2022-2023.pptx  Lecture6_Semantic_Tableaux_Method_2022-2023.pptx  Lecture7_Resolution_proposition_2022-2023.pptx  Lecture8_Resolution_predicate_2022-2023.pptx  Lectures 13&14_Logic_circuits_2022-2023.pptx  Operatii_baze_de_numeratie.doc  Overview_Computational Logic discipline.pptx
Semester 1/Computational Logic/Optional Homework/: Optional_homework_Implementation_Operations_Conversions.doc  Optional_homework_Modelling_reasoning.doc
Semester 1/Computer System Architecture (ASC)/: ASC Exam 2023.jfif
Semester 1/Fundamentals of Programming/a1 - Three Simple Algorithmic Problems/: p1.py  p2.py  p3.py
Semester 1/Fundamentals of Programming/a2 - Bubble ⁄ Shell Sort/: README.md  assignment 2.py
Semester 1/Fundamentals of Programming/a3 - Bubble⁄Shell Sort Complexity/: README.md  assignment_3.py
Semester 1/Fundamentals of Programming/a4 - Backtracking⁄ Dynamic Programming/: Assignment 4.py  README.md
Semester 1/Fundamentals of Programming/a6 - Apartment Building Admin App/: README.md
Semester 1/Fundamentals of Programming/a7 - Expenses Managing/: README.md
Semester 1/Mathematical Analysis/Exam Prep + Help/: Calc Synopsis (1).jfif  Calculus Exam 1.jfif  Calculus Exam 4.jfif  Calculus Midterm Retake.jfif
Semester 1/Mathematical Analysis/Exam Subjects + Help/: Calc Synopsis (2).jfif  Calc Synopsis (3).jfif
Semester 2/Data Structures & Algorithms/Laboratory 1 - Map - Dynamic Array/: App.cpp  ExtendedTest.cpp  Makefile  Map.cpp  Map.h  (+3 more)
Semester 2/Data Structures & Algorithms/Laboratory 2 - Bag - DLL/: App.cpp  Bag.cpp  Bag.h  BagIterator.cpp  BagIterator.h  CMakeLists.txt  ExtendedTest.cpp
Semester 2/Data Structures & Algorithms/Laboratory 4 - Set - Coalesced Chaining/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  ExtendedTest.h  Set.cpp  Set.h  SetIterator.cpp  SetIterator.h  ShortTest.cpp
Semester 2/Graph Algorithmics/: DFS.py  Exceptions.py  Graph.py  UI.py  tests.py
Semester 2/OOP/a45-913-Fintina-Olivia/: CMakeLists.txt  Controller.cpp  Controller.h  Domain.cpp  DynamicArray.h  Repository.cpp  Repository.h  TestAll.h  UI.cpp  UI.h  default.txt  main.cpp  testController.cpp  testDomain.cpp  testDynamicArray.cpp  testRepository.cpp
Semester 2/Object-Oriented Programming/Exam Prep/Exam 914 - Observer/: CMakeLists.txt  Department.cpp  Department.h  Observer.cpp  Observer.h  Repository.cpp  Repository.h  Volunteer.cpp  Volunteer.h  alldepartments.cpp  alldepartments.h  alldepartments.ui  departmentgui.cpp  departmentgui.h  departmentgui.ui  departments.txt  main.cpp  volunteers.txt
Semester 2/Object-Oriented Programming/Tests Prep/Week 12 - Cars/: CMakeLists.txt  README.md  input.txt  main.cpp
Semester 2/Object-Oriented Programming/Tests Prep/Week 12 - Cars/Controller/: Controller.cpp  Controller.h
Semester 2/Object-Oriented Programming/Tests Prep/Week 12 - Cars/Domain/: Car.cpp  Car.h
Semester 2/Object-Oriented Programming/Tests Prep/Week 12 - Cars/GUI/: GUI.cpp  GUI.h
Semester 2/Object-Oriented Programming/Tests Prep/Week 12 - Cars/Repository/: Repository.cpp  Repository.h
Semester 2/Object-Oriented Programming/a6 - Trench Coats using STL Vectors/: CMakeLists.txt  Controller.cpp  Controller.h  Domain.cpp  Domain.h  README.md  Repository.cpp  Repository.h  TestAll.h  TestRepository.cpp  UI.cpp  UI.h  main.cpp  testController.cpp  testDomain.cpp
Semester 2/Object-Oriented Programming/a789 - GUI/A789/: CMakeLists.txt  ShoppingBasket.html  main.cpp  text.txt
Semester 2/Object-Oriented Programming/a789 - GUI/A789/AbstractShoppingBasket/: AbstractShoppingBasket.cpp  AbstractShoppingBasket.h
Semester 2/Object-Oriented Programming/a789 - GUI/A789/AdminModeGUI/: AdminModeGUI.cpp  AdminModeGUI.h
Semester 2/Object-Oriented Programming/a789 - GUI/A789/CSVShoppingBasket/: CSVShoppingBasket.cpp  CSVShoppingBasket.h
Semester 2/Object-Oriented Programming/a789 - GUI/A789/Console/: console.cpp  console.h
Semester 2/Object-Oriented Programming/a789 - GUI/A789/Domain/: domain.cpp  domain.h
Semester 2/Object-Oriented Programming/a789 - GUI/A789/Exceptions/: Exceptions.cpp  Exceptions.h
Semester 2/Object-Oriented Programming/a789 - GUI/A789/FileRepository/: FileRepository.cpp  FileRepository.h
Semester 2/Object-Oriented Programming/a789 - GUI/A789/GUI/: GUI.cpp  GUI.h
Semester 2/Object-Oriented Programming/a789 - GUI/A789/HTMLShoppingBasket/: HTMLShoppingBasket.cpp  HTMLShoppingBasket.h
Semester 2/Object-Oriented Programming/a789 - GUI/A789/Repository/: repository.cpp  repository.h
Semester 2/Object-Oriented Programming/a789 - GUI/A789/Service/: service.cpp  service.h
Semester 2/Object-Oriented Programming/a789 - GUI/A789/Tests/: test_domain.cpp  test_domain.h  test_repository.cpp  test_repository.h  test_service.cpp  test_service.h  test_validation.cpp  test_validation.h
Semester 2/Object-Oriented Programming/a789 - GUI/A789/UserModeGUI/: UserModeGUI.cpp  UserModeGUI.h
Semester 2/Object-Oriented Programming/a789 - GUI/A789/Validation/: validation.cpp  validation.h
Semester 6/Numerical Calculus/: Lab1.m  Lab2_p1.m  Lab2_p2.m  Lab2_p3.m  Lab2_p4.m
(+730 files in other folders)
